feat: Configuración completa de CI/CD con Cloud Run - Trigger activado